--- a/penombre.css
+++ b/penombre.css
@@ -276,16 +276,6 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
   width: 402px;
   content: url("/systems/penombre/assets/ui/frise_plus_grande_sur_fond_sombre.png");
 }
-/* ---------------------------------------------
-        Items
---------------------------------------------- */
-.pouvoir .pouvoir-content .standard-form .details {
-  display: flex;
-  justify-content: space-between;
-}
-.pouvoir .pouvoir-content .standard-form .details select[name="system.type"] {
-  width: 100px;
-}
 .penombre {
   /* ---------------------------------------------
         Eminence
@@ -1014,6 +1004,13 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+.penombre .pouvoir .pouvoir-content .standard-form .details {
+  display: flex;
+  justify-content: space-between;
+}
+.penombre .pouvoir .pouvoir-content .standard-form .details select[name="system.type"] {
+  width: 100px;
+}
 #penombre-reserve-collegiale {
   padding: none;
 }
@@ -1083,4 +1080,7 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
 }
 #penombre-reserve-collegiale .div-jetons-2 .jetons .jeton {
   text-align: center;
+}
+.penombre-roll-dialog .atout.checked {
+  background-color: aqua;
 }
