--- a/templates/roll-dialog.hbs
+++ b/templates/roll-dialog.hbs
@@ -23,8 +23,16 @@
       <input type="checkbox" name="effetMagique" /><label>Effet magique</label>
     </div>
   </fieldset>
+  <div class="form-group difficulte">
+    <label for="difficulte">{{localize "PENOMBRE.ui.difficulte"}}</label>
+    <div class="form-fields">
+      <select name="difficulte" id="difficulte">
+        {{selectOptions choiceDifficulte selected=difficulte localize=true}}
+      </select>
+    </div>
+  </div>
   <div class="form-group rollMode">
-    <label class="near" for="rollMode">{{localize "CHAT.RollDefault"}}</label>
+    <label for="rollMode">{{localize "CHAT.RollDefault"}}</label>
     <div class="form-fields">
       <select name="rollMode" id="rollMode">
         {{selectOptions rollModes selected=rollMode localize=true}}
