data-tooltip Description Items

--- a/styles/items.less
+++ b/styles/items.less
@@ -1,5 +1,5 @@
 .penombre {
-  .pouvoir {
+  &.pouvoir {
     .pouvoir-content .standard-form .details {
       display: flex;
       justify-content: space-between;
