--- a/templates/pouvoir.hbs
+++ b/templates/pouvoir.hbs
@@ -1,7 +1,7 @@
 {{log "pouvoir" this}}
 <section class="standard-form">
     {{formInput fields.name value=item.name localize=true}}
-    <div class="details">
+    <div class="details enabled">
         {{formGroup systemFields.utilise value=systemSource.utilise localize=true}}
         {{formGroup systemFields.type value=systemSource.type localize=true}}
     </div>
