--- a/templates/eminence/partials/maitrises.hbs
+++ b/templates/eminence/partials/maitrises.hbs
@@ -16,13 +16,63 @@
             </div>
         </div>
         <div class="maitrises{{#if isStyleJeuAvance}}-2{{/if}} absolue">
-            {{#each maitrises as |maitrise|}}
-                {{log 'maitrise' maitrise }}
-                <label>{{maitrise.name}}</label>
-                {{maitrise.system.harmonique}}
-                {{maitrise.system.prerequis}}
-                {{maitrise.system.niveau}}
-            {{/each}}
+            <table class="item-list centpourcent">
+                <tr class="centpourcent">
+                    <th>
+                        {{ localize 'PENOMBRE.ui.maitriseNom' }}
+                    </th>
+                    <th class="harmonique-width">
+                        {{ localize 'PENOMBRE.ui.maitriseHarmonique' }}
+                    </th>
+                    <th>
+                        {{ localize 'PENOMBRE.ui.maitrisePrerequis' }}
+                    </th>
+                    <th>
+
+                    </th>
+                    <th class="item-controls">
+                        {{#if unlocked}}
+                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.maitriseCreate' }}" data-action="create" data-type="maitrise"><i class="fas fa-plus"></i></a>
+                        {{/if}}
+                    </th>
+                </tr>
+                {{#each maitrises as |item id|}}
+                <tr class="item" data-tooltip="{{{item.system.description}}}">
+                    <td>
+                        <span class="item-name">{{item.name}}</span>
+                    </td>
+                    <td class="harmonique-width">
+                    {{#if (eq item.system.harmonique 'ame')}}
+                        <span class="item-type">{{ localize 'PENOMBRE.Harmonique.ame.label' }}</span>
+                    {{/if}}
+                    {{#if (eq item.system.harmonique 'esprit')}}
+                        <span class="item-type">{{ localize 'PENOMBRE.Harmonique.esprit.label' }}</span>
+                    {{/if}}
+                    {{#if (eq item.system.harmonique 'etincelle')}}
+                        <span class="item-type">{{ localize 'PENOMBRE.Harmonique.etincelle.label' }}</span>
+                    {{/if}}
+                    {{#if (eq item.system.harmonique 'nature')}}
+                        <span class="item-type">{{ localize 'PENOMBRE.Harmonique.nature.label' }}</span>
+                    {{/if}}
+                    {{#if (eq item.system.harmonique 'nuit')}}
+                        <span class="item-type">{{ localize 'PENOMBRE.Harmonique.nuit.label' }}</span>
+                    {{/if}}
+                    </td>
+                    <td>
+                        <span class="item-prerequis">{{item.system.prerequis}}</span>
+                    </td>
+                    <td>
+                        <span class="item-niveau">{{item.system.niveau}}</span>
+                    </td>
+                    <td class="item-controls">
+                    {{#if ../unlocked}}
+                        <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.maitriseEdit' }}" data-action="edit" data-item-id="{{item._id}}"><i class="fas fa-edit"></i></a>
+                        <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.maitriseDelete' }}" data-action="delete" data-item-id="{{item._id}}"><i class="fas fa-trash"></i></a>
+                    {{/if}}
+                    </td>
+                </tr>
+                {{/each}}
+            </table>
         </div>
     </div>
 </div>
