--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -369,7 +369,7 @@ body {
 }
 
 .penombre {
-  /* ---------------------------------------------
+/* ---------------------------------------------
         Eminence
 --------------------------------------------- */
   &.eminence {
@@ -1140,6 +1140,18 @@ body {
             border: 1px solid #917f35;
             border-radius: @border-radius-small;
             padding: 2px;
+
+            td {
+              font-family: @font-chocolate;
+              font-size: @font-size-midlarge;
+            }
+
+            th.item-controls,
+            td.item-controls {
+              width: 70px;
+              font-size: @font-size-base;
+            }
+
           }
 
           .maitrises-2 {
@@ -1150,6 +1162,23 @@ body {
             border: 1px solid #917f35;
             border-radius: @border-radius-small;
             padding: 2px;
+
+            td {
+              font-family: @font-chocolate;
+              font-size: @font-size-midlarge;
+            }
+
+            th.harmonique-width,
+            td.harmonique-width {
+              width: 70px;
+            }
+
+            th.item-controls,
+            td.item-controls {
+              width: 70px;
+              font-size: @font-size-base;
+            }
+
           }
         }
       }
