--- a/templates/eminence/partials/atouts.hbs
+++ b/templates/eminence/partials/atouts.hbs
@@ -20,21 +20,21 @@
             <table class="item-list centpourcent">
                 <tr class="centpourcent">
                     <th>
-                        {{ localize 'PENOMBRE.ui.atoutNom' }}
+                        {{ localize 'PENOMBRE.ui.nom' }}
                     </th>
                     <th class="item-case-width">
-
+                        {{ localize 'PENOMBRE.ui.niveau' }}
                     </th>
                     <th class="item-controls">
                         {{#if unlocked}}
-                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.atoutCreate' }}" data-action="create" data-type="atout"><i class="fas fa-plus"></i></a>
+                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.create' item='un atout' }}" data-action="create" data-type="atout"><i class="fas fa-plus"></i></a>
                         {{/if}}
                     </th>
                 </tr>
                 {{#each atouts as |item id|}}
-                    <tr class="item" data-tooltip="{{{item.system.description}}}">
+                    <tr class="item">
                         <td>
-                            <span class="item-name">{{item.name}}</span>
+                            <span class="item-name" data-tooltip="{{{item.system.description}}}">{{item.name}}</span>
                         </td>
                         <td  class="item-case-width" data-tooltip="{{item.system.valeur}}">
                         {{#times 3}}
@@ -43,8 +43,8 @@
                         </td>
                         <td class="item-controls">
                         {{#if ../unlocked}}
-                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.atoutEdit' }}" data-action="edit" data-item-id="{{item._id}}"><i class="fas fa-edit"></i></a>
-                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.atoutDelete' }}" data-action="delete" data-item-id="{{item._id}}"><i class="fas fa-trash"></i></a>
+                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.edit' }}" data-action="edit" data-item-id="{{item._id}}"><i class="fas fa-edit"></i></a>
+                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.delete' }}" data-action="delete" data-item-id="{{item._id}}"><i class="fas fa-trash"></i></a>
                         {{/if}}
                         </td>
                     </tr>
