--- a/templates/eminence/partials/maitrises.hbs
+++ b/templates/eminence/partials/maitrises.hbs
@@ -19,27 +19,27 @@
             <table class="item-list centpourcent">
                 <tr class="centpourcent">
                     <th>
-                        {{ localize 'PENOMBRE.ui.maitriseNom' }}
+                        {{ localize 'PENOMBRE.ui.nom' }}
                     </th>
                     <th class="harmonique-width">
-                        {{ localize 'PENOMBRE.ui.maitriseHarmonique' }}
+                        {{ localize 'PENOMBRE.ui.harmonique' }}
                     </th>
                     <th>
-                        {{ localize 'PENOMBRE.ui.maitrisePrerequis' }}
+                        {{ localize 'PENOMBRE.ui.prerequis' }}
                     </th>
                     <th>
-
+                        {{ localize 'PENOMBRE.ui.niveau' }}
                     </th>
                     <th class="item-controls">
                         {{#if unlocked}}
-                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.maitriseCreate' }}" data-action="create" data-type="maitrise"><i class="fas fa-plus"></i></a>
+                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.create' item='une maîtrise' }}" data-action="create" data-type="maitrise"><i class="fas fa-plus"></i></a>
                         {{/if}}
                     </th>
                 </tr>
                 {{#each maitrises as |item id|}}
-                <tr class="item" data-tooltip="{{{item.system.description}}}">
+                <tr class="item">
                     <td>
-                        <span class="item-name">{{item.name}}</span>
+                        <span class="item-name" data-tooltip="{{{item.system.description}}}">{{item.name}}</span>
                     </td>
                     <td class="harmonique-width">
                         <span class="item-type">{{ localize (concat 'PENOMBRE.Harmonique.' item.system.harmonique '.label') }}</span>
@@ -52,8 +52,8 @@
                     </td>
                     <td class="item-controls">
                     {{#if ../unlocked}}
-                        <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.maitriseEdit' }}" data-action="edit" data-item-id="{{item._id}}"><i class="fas fa-edit"></i></a>
-                        <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.maitriseDelete' }}" data-action="delete" data-item-id="{{item._id}}"><i class="fas fa-trash"></i></a>
+                        <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.edit' }}" data-action="edit" data-item-id="{{item._id}}"><i class="fas fa-edit"></i></a>
+                        <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.delete' }}" data-action="delete" data-item-id="{{item._id}}"><i class="fas fa-trash"></i></a>
                     {{/if}}
                     </td>
                 </tr>
