--- a/templates/eminence/partials/pouvoirs.hbs
+++ b/templates/eminence/partials/pouvoirs.hbs
@@ -21,32 +21,32 @@
                     <th class="item-coche">
                     </th>
                     <th>
-                        {{ localize 'PENOMBRE.ui.pouvoirNom' }}
+                        {{ localize 'PENOMBRE.ui.nom' }}
                     </th>
                     <th>
-                        {{ localize 'PENOMBRE.ui.pouvoirType' }}
+                        {{ localize 'PENOMBRE.ui.type' }}
                     </th>
                     <th class="item-controls">
                         {{#if unlocked}}
-                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.pouvoirCreate' }}" data-action="create" data-type="pouvoir"><i class="fas fa-plus"></i></a>
+                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.create' item='un pouvoir' }}" data-action="create" data-type="pouvoir"><i class="fas fa-plus"></i></a>
                         {{/if}}
                     </th>
                 </tr>
                 {{#each pouvoirs as |item id|}}
-                <tr class="item" data-tooltip="{{{item.system.description}}}">
+                <tr class="item">
                     <td class="item-coche">
                         <img class="item-case" src="systems/penombre/assets/ui/transp_case_{{#if item.system.utilise}}checked{{else}}unchecked{{/if}}.png"></img>
                     </td>
                     <td>
-                        <span class="item-name">{{item.name}}</span>
+                        <span class="item-name" data-tooltip="{{{item.system.description}}}">{{item.name}}</span>
                     </td>
                     <td>
                         <span class="item-type">{{ localize (concat 'PENOMBRE.Pouvoir.type.' item.system.type '.label') }}</span>
                     </td>
                     <td class="item-controls">
                     {{#if ../unlocked}}
-                        <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.pouvoirEdit' }}" data-action="edit" data-item-id="{{item._id}}"><i class="fas fa-edit"></i></a>
-                        <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.pouvoirDelete' }}" data-action="delete" data-item-id="{{item._id}}"><i class="fas fa-trash"></i></a>
+                        <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.edit' }}" data-action="edit" data-item-id="{{item._id}}"><i class="fas fa-edit"></i></a>
+                        <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.delete' }}" data-action="delete" data-item-id="{{item._id}}"><i class="fas fa-trash"></i></a>
                     {{/if}}
                     </td>
                 </tr>
