Tous les {{log}} en commentaire

--- a/templates/atout.hbs
+++ b/templates/atout.hbs
@@ -1,4 +1,4 @@
-{{log "atout" this}}
+{{!log "atout" this}}
 <section class="standard-form">
     {{formInput fields.name value=item.name localize=true}}
     <div class="details enabled">
