--- a/templates/eminence/partials/conscience.hbs
+++ b/templates/eminence/partials/conscience.hbs
@@ -1,4 +1,4 @@
-{{log "conscience" this}}
+{{!log "conscience" this}}
 <div class="eminence-conscience eminence-conscience-{{#if locked}}locked{{else}}unlocked{{/if}} flexible">
   <div class="col-1-1 text-vertical-conscience">{{localize "PENOMBRE.ui.section.conscience"}}</div>
   <div class="col-2-1 frise-verticale">
