--- a/templates/eminence/partials/harmoniques.hbs
+++ b/templates/eminence/partials/harmoniques.hbs
@@ -1,4 +1,4 @@
-{{log "harmoniques" this}}
+{{!log "harmoniques" this}}
 <div class="eminence-harmoniques flexible">
   <div class="col-1-1 text-vertical-harmoniques">{{localize "PENOMBRE.ui.section.harmoniques"}}</div>
   <div class="col-2-1 frise-verticale">
