--- a/templates/eminence/partials/maitrises.hbs
+++ b/templates/eminence/partials/maitrises.hbs
@@ -1,4 +1,4 @@
-{{log "EminenceSheet - Partials - Maîtrises" this }}
+{{!log "EminenceSheet - Partials - Maîtrises" this }}
 <div class="eminence-maitrises{{#if isStyleJeuAvance}}-2{{/if}}">
     <span class="titre-section-maitrises">{{localize "PENOMBRE.ui.maitrises"}}</span>
     <div class="content">
