--- a/templates/eminence/partials/pouvoirs.hbs
+++ b/templates/eminence/partials/pouvoirs.hbs
@@ -1,4 +1,4 @@
-{{log "EminenceSheet - Partials - Pouvoirs" this }}
+{{!log "EminenceSheet - Partials - Pouvoirs" this }}
 <div class="eminence-pouvoirs{{#if isStyleJeuAvance}}-2{{/if}}">
     <span class="titre-section-pouvoirs">{{localize "PENOMBRE.ui.pouvoirs"}}</span>
     <div class="content">
