--- a/templates/eminence/partials/recapitulatif.hbs
+++ b/templates/eminence/partials/recapitulatif.hbs
@@ -1,4 +1,4 @@
-{{log "EminenceSheet - Partials - Recapitulatif" this }}
+{{!log "EminenceSheet - Partials - Recapitulatif" this }}
 <div class="eminence-recapitulatif">
     <div class="content">
         <div class="tableau">
