--- a/templates/maitrise.hbs
+++ b/templates/maitrise.hbs
@@ -1,4 +1,4 @@
-{{log "maitrise" this}}
+{{!log "maitrise" this}}
 <section class="standard-form">
   {{formInput fields.name value=item.name localize=true}}
   {{formGroup systemFields.harmonique value=systemSource.harmonique localize=true}}
