--- a/templates/reserve-collegiale.hbs
+++ b/templates/reserve-collegiale.hbs
@@ -1,4 +1,4 @@
-{{log "reserve collegiale" this}}
+{{!log "reserve collegiale" this}}
 <div class="div-jetons{{#if (or isStyleJeuStandard isStyleJeuAvance)}}-2{{/if}}">
   <div class="jetons jetons-{{ifThen isGM 'gm' 'player'}}">
     {{#each jetons}}
