--- a/templates/eminence/partials/atouts.hbs
+++ b/templates/eminence/partials/atouts.hbs
@@ -1,4 +1,4 @@
-{{log "EminenceSheet - Partials - Atouts" this }}
+{{!log "EminenceSheet - Partials - Atouts" this }}
 <div class="eminence-atouts{{#if isStyleJeuAvance}}-2{{/if}}">
     <span class="titre-section-atouts">{{localize "PENOMBRE.ui.atouts"}}</span>
     <div class="content">
