--- a/templates/eminence/partials/timbre.hbs
+++ b/templates/eminence/partials/timbre.hbs
@@ -1,4 +1,4 @@
-{{log "timbre" this}}
+{{!log "timbre" this}}
 <div class="eminence-timbre{{#if (or isStyleJeuStandard isStyleJeuAvance)}}-2{{/if}}">
   {{#if (or isStyleJeuStandard isStyleJeuAvance)}}
     <div class="cadre-img">
