--- a/templates/pouvoir.hbs
+++ b/templates/pouvoir.hbs
@@ -1,4 +1,4 @@
-{{log "pouvoir" this}}
+{{!log "pouvoir" this}}
 <section class="standard-form">
     {{formInput fields.name value=item.name localize=true}}
     <div class="details enabled">
