--- a/templates/dialogs/roll-dialog.hbs
+++ b/templates/dialogs/roll-dialog.hbs
@@ -22,7 +22,7 @@
         <label for="difficulte">{{localize "PENOMBRE.ui.difficulte"}}</label>
         <div class="form-fields">
           <select name="difficulte" id="difficulte">
-            {{selectOptions choiceDifficulte selected=difficulte localize=true}}
+            {{selectOptions choiceDifficulte selected=difficulte localize=true blank=""}}
           </select>
         </div>
       </div>
