--- a/templates/eminence/partials/atouts.hbs
+++ b/templates/eminence/partials/atouts.hbs
@@ -23,7 +23,7 @@
                         {{ localize 'PENOMBRE.ui.nom' }}
                     </th>
                     <th class="item-case-width">
-                        {{ localize 'PENOMBRE.ui.niveau' }}
+
                     </th>
                     <th class="item-controls">
                         {{#if unlocked}}
@@ -32,22 +32,22 @@
                     </th>
                 </tr>
                 {{#each atouts as |item id|}}
-                    <tr class="item">
-                        <td>
-                            <span class="item-name" data-tooltip="{{{item.system.description}}}">{{item.name}}</span>
-                        </td>
-                        <td  class="item-case-width" data-tooltip="{{item.system.valeur}}">
-                        {{#times 3}}
-                            <img class="item-case" src="systems/penombre/assets/ui/de_case_{{#if (gte item.system.valeur @index)}}checked{{else}}unchecked{{/if}}.png"></img>
-                        {{/times}}
-                        </td>
-                        <td class="item-controls">
-                        {{#if ../unlocked}}
-                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.edit' }}" data-action="edit" data-item-id="{{item._id}}"><i class="fas fa-edit"></i></a>
-                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.delete' }}" data-action="delete" data-item-id="{{item._id}}"><i class="fas fa-trash"></i></a>
-                        {{/if}}
-                        </td>
-                    </tr>
+                <tr class="item" data-item-id="{{item._id}}">
+                    <td>
+                        <span class="item-name" data-tooltip="{{{item.system.description}}}">{{item.name}}</span>
+                    </td>
+                    <td  class="item-case-width" data-tooltip="{{item.system.valeur}}">
+                    {{#times 3}}
+                        <img class="item-case" src="systems/penombre/assets/ui/de_case_{{#if (gte item.system.valeur @index)}}checked{{else}}unchecked{{/if}}.png"></img>
+                    {{/times}}
+                    </td>
+                    <td class="item-controls">
+                    {{#if ../unlocked}}
+                        <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.edit' }}" data-action="edit" data-item-id="{{item._id}}"><i class="fas fa-edit"></i></a>
+                        <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.delete' }}" data-action="delete" data-item-id="{{item._id}}"><i class="fas fa-trash"></i></a>
+                    {{/if}}
+                    </td>
+                </tr>
                 {{/each}}
             </table>
         </div>
