--- a/templates/atout.hbs
+++ b/templates/atout.hbs
@@ -1,7 +1,10 @@
 {{!log "atout" this}}
 <section class="standard-form">
-    {{formInput fields.name value=item.name localize=true}}
-    <div class="details enabled">
+    <div class="logo-frame">
+        <img class="logo-img" src="{{document.img}}" data-action="editImage" width="80" data-edit="img" data-tooltip="{{document.name}}" />
+        <span class="name">{{formInput fields.name value=item.name localize=true}}</span>
+    </div>
+    <div class="details">
     {{formGroup systemFields.valeur value=systemSource.valeur localize=true}}
     </div>
     {{formInput systemFields.description enriched=enrichedDescription value=system.description name="system.description" toggled=true}}
