--- a/templates/eminence/partials/atouts.hbs
+++ b/templates/eminence/partials/atouts.hbs
@@ -32,7 +32,7 @@
                     </th>
                 </tr>
                 {{#each atouts as |item id|}}
-                <tr class="item" data-item-id="{{item._id}}">
+                <tr class="item draggable" data-item-id="{{item._id}}">
                     <td>
                         <span class="item-name" data-tooltip="{{{item.system.description}}}">{{item.name}}</span>
                     </td>
