--- a/penombre.css
+++ b/penombre.css
@@ -1034,12 +1034,33 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+.penombre.atout .atout-content .standard-form .logo-frame {
+  display: flex;
+  justify-content: space-between;
+}
+.penombre.atout .atout-content .standard-form .logo-frame .name {
+  width: calc(100% - 90px);
+}
+.penombre.maitrise .maitrise-content .standard-form .logo-frame {
+  display: flex;
+  justify-content: space-between;
+}
+.penombre.maitrise .maitrise-content .standard-form .logo-frame .name {
+  width: calc(100% - 90px);
+}
 .penombre.pouvoir .pouvoir-content .standard-form .details {
   display: flex;
   justify-content: space-between;
 }
 .penombre.pouvoir .pouvoir-content .standard-form .details select[name="system.type"] {
   width: 100px;
+}
+.penombre.pouvoir .pouvoir-content .standard-form .logo-frame {
+  display: flex;
+  justify-content: space-between;
+}
+.penombre.pouvoir .pouvoir-content .standard-form .logo-frame .name {
+  width: calc(100% - 90px);
 }
 #penombre-reserve-collegiale {
   padding: none;
