--- a/templates/eminence/partials/maitrises.hbs
+++ b/templates/eminence/partials/maitrises.hbs
@@ -37,7 +37,7 @@
                     </th>
                 </tr>
                 {{#each maitrises as |item id|}}
-                <tr class="item" data-item-id="{{item._id}}">
+                <tr class="item draggable" data-item-id="{{item._id}}">
                     <td>
                         <span class="item-name" data-tooltip="{{{item.system.description}}}">{{item.name}}</span>
                     </td>
