--- a/templates/maitrise.hbs
+++ b/templates/maitrise.hbs
@@ -1,6 +1,9 @@
 {{!log "maitrise" this}}
 <section class="standard-form">
-  {{formInput fields.name value=item.name localize=true}}
+  <div class="logo-frame">
+      <img class="logo-img" src="{{document.img}}" data-action="editImage" widtg="80" data-edit="img" data-tooltip="{{document.name}}" />
+      <span class="name">{{formInput fields.name value=item.name localize=true}}</span>
+  </div>
   {{formGroup systemFields.harmonique value=systemSource.harmonique localize=true}}
   {{formGroup systemFields.prerequis value=systemSource.prerequis localize=true}}
   {{formGroup systemFields.niveau value=systemSource.niveau localize=true}}
