--- a/templates/pouvoir.hbs
+++ b/templates/pouvoir.hbs
@@ -1,7 +1,10 @@
 {{!log "pouvoir" this}}
 <section class="standard-form">
-    {{formInput fields.name value=item.name localize=true}}
-    <div class="details enabled">
+    <div class="logo-frame">
+        <img class="logo-img" src="{{document.img}}" data-action="editImage" widtg="80" data-edit="img" data-tooltip="{{document.name}}" />
+        <span class="name">{{formInput fields.name value=item.name localize=true}}</span>
+    </div>
+    <div class="details">
         {{formGroup systemFields.utilise value=systemSource.utilise localize=true}}
         {{formGroup systemFields.type value=systemSource.type localize=true}}
     </div>
