--- a/penombre.css
+++ b/penombre.css
@@ -1132,6 +1132,95 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
 #penombre-reserve-collegiale .div-jetons-2 .jetons .jeton {
   text-align: center;
 }
-.penombre-roll-dialog .atout.checked {
-  background-color: aqua;
+.penombre-roll-dialog {
+  display: table;
+  width: 100%;
+}
+.penombre-roll-dialog .line-1 {
+  width: 100%;
+  float: left;
+}
+.penombre-roll-dialog .line-1 .part-left-1 {
+  width: 270px;
+  float: left;
+}
+.penombre-roll-dialog .line-1 .part-left-1 fieldset {
+  display: table;
+  float: left;
+  width: 100%;
+}
+.penombre-roll-dialog .line-1 .part-left-1 fieldset label {
+  float: left;
+  width: 190px;
+}
+.penombre-roll-dialog .line-1 .part-left-1 fieldset input {
+  text-align: center;
+  float: left;
+  width: 40px;
+}
+.penombre-roll-dialog .line-1 .part-left-1 fieldset .clearboth {
+  clear: both;
+}
+.penombre-roll-dialog .line-1 .part-left-1 fieldset .clearboth #deMerveilleux {
+  width: 20px;
+}
+.penombre-roll-dialog .line-1 .part-left-1 fieldset .clearboth label {
+  width: 80px;
+}
+.penombre-roll-dialog .line-1 .part-left-1 fieldset #formule {
+  text-align: left;
+  width: 230px;
+}
+.penombre-roll-dialog .line-1 .part-right-1 {
+  margin-left: 275px;
+  width: calc(100% - 275px);
+}
+.penombre-roll-dialog .line-2 {
+  display: table;
+  clear: both;
+  width: 100%;
+}
+.penombre-roll-dialog .line-2 .atout.checked {
+  background-color: #917f35;
+  color: white;
+}
+.penombre-roll-dialog .line-2 .atoutdata {
+  float: left;
+  width: 100%;
+}
+.penombre-roll-dialog .line-2 .atoutdata .nom {
+  width: 450px;
+  float: left;
+}
+.penombre-roll-dialog .line-2 .atoutdata .level {
+  margin-left: 454px;
+  width: calc(100% - 454px);
+}
+.penombre-roll-dialog .line-2 .bonustotal {
+  float: left;
+  width: 100%;
+}
+.penombre-roll-dialog .line-2 .bonustotal label {
+  margin-left: 250px;
+  width: 235px;
+  float: left;
+  width: 80;
+}
+.penombre-roll-dialog .line-2 .bonustotal input {
+  text-align: center;
+  float: left;
+  width: 40px;
+}
+.penombre-roll-dialog .line-3 {
+  display: table;
+  float: left;
+  width: 100%;
+}
+.penombre-roll-dialog .line-3 .part-left-3 {
+  width: 270px;
+  float: left;
+}
+.penombre-roll-dialog .line-3 .part-right-3 {
+  margin-left: 275px;
+  width: calc(100% - 275px);
 }
