--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -1,5 +1,119 @@
 .penombre-roll-dialog {
-  .atout.checked {
-    background-color: aqua;
+  display : table;
+  width: 100%;
+
+  .line-1 {
+    width: 100%;
+    float: left;
+
+    .part-left-1 {
+      width: 270px;
+      float: left;
+
+      fieldset {
+        display: table;
+        float: left;
+        width: 100%;
+
+        label {
+          float: left;
+          width: 190px;
+        }
+
+        input {
+          text-align: center;
+          float: left;
+          width: 40px;
+
+        }
+
+        .clearboth {
+          clear: both;
+
+          #deMerveilleux {
+            width: 20px;
+          }
+
+          label {
+            width: 80px;
+          }
+        }
+
+        #formule {
+          text-align: left;
+          width: 230px;
+        }
+      }
+
+    }
+
+    .part-right-1 {
+      margin-left: 275px;
+      width: calc(100% - 275px);
+    }
+
   }
+
+
+  .line-2 {
+    display: table;
+    clear: both;
+    width: 100%;
+
+    .atout.checked {
+      background-color: @color-accent;
+      color: white;
+    }
+
+    .atoutdata {
+      float: left;
+      width: 100%;
+
+      .nom {
+        width: 450px;
+        float: left;
+      }
+
+      .level {
+        margin-left: 454px;
+        width: calc(100% - 454px);
+      }
+    }
+
+    .bonustotal {
+      float: left;
+      width: 100%;
+
+      label {
+        margin-left: 250px;
+        width: 235px;
+        float: left;
+        width: 80;
+      }
+
+      input {
+        text-align: center;
+        float: left;
+        width: 40px;
+      }
+    }
+  }
+
+  .line-3 {
+    display: table;
+    float: left;
+    width: 100%;
+
+    .part-left-3 {
+      width: 270px;
+      float: left;
+    }
+
+    .part-right-3 {
+      margin-left: 275px;
+      width: calc(100% - 275px);
+    }
+  }
+
+
 }
