Roll dialog : la sélection des jetons de Conscience et de la réserve est un slider

--- a/templates/roll-dialog.hbs
+++ b/templates/roll-dialog.hbs
@@ -69,13 +69,9 @@
             <input type="number" id="jetons" name="jetons" />
           </div>
           <label>Conscience :</label>
-          <div class="form-fields">
-            <input type="number" id="jetonsConscience" name="jetonsConscience" />
-          </div>
+          {{formInput fieldJetonsConscience name="jetonsConscience" id="jetonsConscience"}}
           <label>Réserve collégiale :</label>
-          <div class="form-fields">
-            <input type="number" id="jetonsReserve" name="jetonsReserve" />
-          </div>
+          {{formInput fieldJetonsReserve name="jetonsReserve" id="jetonsReserve"}}
         </fieldset>
       </div>
     </div>
