--- a/styles/items.less
+++ b/styles/items.less
@@ -27,7 +27,7 @@
 
 
   &.pouvoir {
-    .pouvoir-content .standard-form {
+    .atout-content .standard-form {
 
       .details {
         display: flex;
@@ -48,5 +48,4 @@
       }
     }
   }
-
 }
