--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -7,7 +7,7 @@
     float: left;
 
     .part-left-1 {
-      width: 270px;
+      width: 275px;
       float: left;
 
       fieldset {
@@ -17,7 +17,7 @@
 
         label {
           float: left;
-          width: 190px;
+          width: 195px;
         }
 
         input {
@@ -48,8 +48,8 @@
     }
 
     .part-right-1 {
-      margin-left: 275px;
-      width: calc(100% - 275px);
+      margin-left: 285px;
+      width: calc(100% - 285px);
     }
 
   }
@@ -60,23 +60,31 @@
     clear: both;
     width: 100%;
 
-    .atout.checked {
-      background-color: @color-accent;
-      color: white;
-    }
+    .defile-div {
+      border: solid;
+      border-width: 0.5px;
+      border-color: gray;
+      overflow-y: auto;
+      height: 125px;
 
-    .atoutdata {
-      float: left;
-      width: 100%;
-
-      .nom {
-        width: 450px;
-        float: left;
+      .atout.checked {
+        background-color: @color-accent;
+        color: white;
       }
 
-      .level {
-        margin-left: 454px;
-        width: calc(100% - 454px);
+      .atoutdata {
+        float: left;
+        width: 100%;
+
+        .nom {
+          width: 450px;
+          float: left;
+        }
+
+        .level {
+          margin-left: 454px;
+          width: calc(100% - 454px);
+        }
       }
     }
 
@@ -88,7 +96,6 @@
         margin-left: 250px;
         width: 235px;
         float: left;
-        width: 80;
       }
 
       input {
@@ -105,15 +112,51 @@
     width: 100%;
 
     .part-left-3 {
-      width: 270px;
+      width: 280px;
       float: left;
+
+      .des-img {
+        float: left;
+        width: 100%;
+
+        img {
+          width: 75px;
+          height: 75px;
+          float: left;
+        }
+      }
+
+      .rollMode {
+        width: calc(100% - 10px);
+      }
+
     }
 
     .part-right-3 {
-      margin-left: 275px;
-      width: calc(100% - 275px);
+      margin-left: 285px;
+      width: calc(100% - 285px);
+
+      .depensetotal {
+        float: left;
+        width: 100%;
+
+        label {
+          width: 200px;
+          float: left;
+        }
+
+        .form-fields {
+          float: left;
+          width: 40px;
+
+          input {
+            text-align: center;
+            float: left;
+            width: 40px;
+          }
+        }
+      }
     }
   }
-
 
 }
