image réserve collégiale en webp

--- a/penombre.css
+++ b/penombre.css
@@ -1076,7 +1076,7 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
   padding: none;
 }
 #penombre-reserve-collegiale .div-jetons {
-  background-image: url("/systems/penombre/assets/ui/reserve-collegiale.jpg");
+  background-image: url("/systems/penombre/assets/ui/reserve-collegiale.webp");
   background-repeat: no-repeat;
   background-size: 550px 550px;
   width: 740px;
