--- a/styles/reserve-collegiale.less
+++ b/styles/reserve-collegiale.less
@@ -3,7 +3,7 @@
 
   // Jetons
   .div-jetons {
-    background-image: url("/systems/penombre/assets/ui/reserve-collegiale.jpg");
+    background-image: url("/systems/penombre/assets/ui/reserve-collegiale.webp");
     background-repeat: no-repeat;
     background-size: 550px 550px;
     width: 740px;
