--- a/templates/atout.hbs
+++ b/templates/atout.hbs
@@ -1,7 +1,7 @@
 {{!log "atout" this}}
 <section class="standard-form">
     <div class="logo-frame">
-        <img class="logo-img" src="{{document.img}}" data-action="editImage" width="80" data-edit="img" data-tooltip="{{document.name}}" />
+        <img class="logo-img" src="{{document.img}}" data-action="editImage" data-tooltip="{{document.name}}" />
         <span class="name">{{formInput fields.name value=item.name localize=true}}</span>
     </div>
     <div class="details">
